<resources>
    <string name="app_name">K9HarnessAndroidApp</string>
    <string name="Account_settings">Account Settings</string>
    <string name="Dog_Settings">Dog Settings</string>
    <string name="Notification_Settings">Notification Settings</string>
    <string name="Device_Settings">Device Settings</string>
    <string name="Bluetooth_Settings">Bluetooth Setttings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to Dog Settings -->
    <string name="threshold_Settings">Threshold Settings</string>
    <string name="threshold_high">High</string>
    <string name="threshold_low">Low</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="respiratory_rate">Resp. Rate</string>
    <string name="abdominal_temp">Ab Temp.</string>
    <string name="core_temp">Core Temp.</string>

    <string name="respiratory_rate_full">Respiratory Rate</string>
    <string name="abdominal_temp_full">Abdominal Temperature</string>
    <string name="core_temp_full">Core Temperature</string>

    <!-- Strings related to Account Settings -->
    <string name="password_setting_title">Password</string>
    <string name="password_setting_hint">Change your password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="verify_password">Verify password</string>
    <string name="save_account_changes">Save changes</string>

    <!-- Strings related to Notification Settings -->
    <string name="title_notification_settings">Notification Settings</string>
    <string name="notify_one">Notify on</string>
    <string name="high">High</string>
    <string name="low">Low</string>
    <string name="description_notification_settings">Notify me when:</string>
    <string name="heart_rate_high_switch">Heart Rate high</string>
    <string name="heart_rate_low_switch">Heart Rate low</string>
    <string name="resp_rate_high_switch">Resp. Rate high</string>
    <string name="resp_rate_low_switch">Resp. Rate low</string>
    <string name="core_temp_high_switch">Core Temp. high</string>
    <string name="core_temp_low_switch">Core Temp. low</string>
    <string name="ab_temp_high_switch">Ab. Temp. high</string>
    <string name="ab_temp_low_switch">Ab. Temp. low</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_wrong_password">Incorrect Password, please try again</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings in the dog overview activity -->
    <string name="Dog_Overview">Dog Overview</string>
    <string name="Dog_Name">Dog Name</string>
    <string name="heart_image_description">Heart</string>
    <string name="thermometer_image_description">Thermometer</string>
    <string name="lungs_image_description">Lungs</string>
    <string name="data_point_button_text">Data Point</string>



    <!--Strings in nav bar -->
    <string name="Log_Out">Log Out</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="Dog_HeartRate">Heart Rate</string>
    <string name="Dog_RespiratoryRate">Respiratory Rate</string>
    <string name="Dog_CoreTemperature">Core Temperature</string>
    <string name="Dog_AbdominalTemperature">Abdominal Temperature</string>
    <string name="Harness_Connection">Harness Connection</string>

    <string name="Connect">Connect</string>
    <string name="Disconnect">Disconnect</string>
    <string name="title_activity_account_register">AccountRegister</string>
</resources>
