<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_dog"
        android:orderInCategory="100"
        android:title="@string/Dog_Settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/nav_account"
        android:orderInCategory="100"
        android:title="@string/Account_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/nav_notification"
        android:orderInCategory="100"
        android:title="@string/Notification_Settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/nav_bluetooth"
        android:orderInCategory="100"
        android:title="@string/Bluetooth_Settings"
        app:showAsAction="never" />
</menu>
