<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.k9harnessandroidapp.SettingsTypeMenu">

    <Button
        android:id="@+id/but_nav_to_account_settings"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/btn_default"
        android:text="@string/Account_settings"
        app:layout_constraintBottom_toTopOf="@+id/but_nav_to_dog_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:text="what" />

    <Button
        android:id="@+id/but_nav_to_dog_settings"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/Dog_Settings"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="236dp" />

    <Button
        android:id="@+id/but_nav_to_notification_settings"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:text="@string/Notification_Settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/but_nav_to_dog_settings" />

    <Button
        android:id="@+id/but_nav_to_bluetooth_settings"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:text="@string/Bluetooth_Settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/but_nav_to_notification_settings"
        app:layout_constraintVertical_bias="0.063" />

</android.support.constraint.ConstraintLayout>
