<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/account_settings"
    tools:context="com.example.android.k9harnessandroidapp.SettingsAccount">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:id="@+id/tableLayout2"
            android:layout_width="wrap_content"
            android:layout_height="185dp"
            android:layout_marginTop="96dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/include2">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/text_current_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="24dp"
                    android:text="@string/current_password"
                    android:textAlignment="textEnd" />

                <EditText
                    android:id="@+id/current_password_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/text_new_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="24dp"
                    android:text="@string/new_password"
                    android:textAlignment="viewEnd" />

                <EditText
                    android:id="@+id/new_password_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/text_verify_new_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="24dp"
                    android:text="@string/verify_password"
                    android:textAlignment="viewEnd" />

                <EditText
                    android:id="@+id/verify_new_password_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button_submit_account_settings_changes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/save_account_changes" />
            </TableRow>

        </TableLayout>

        <include
            android:id="@+id/include2"
            layout="@layout/app_bar_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/navigation_menu"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        android:layout_gravity="start">
    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
