<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dog_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:label="@string/Dog_Overview"
    tools:context="com.example.android.k9harnessandroidapp.DogOverview">

    <FrameLayout
        android:id="@+id/dogOverviewContentFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                android:id="@+id/include"
                layout="@layout/app_bar_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/hrImage"
                android:layout_width="100dp"
                android:layout_height="75dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/heart_image_description"
                android:padding="0dp"
                android:scaleType="fitCenter"
                android:onClick="goToHeartRateActivity"
                app:layout_constraintBottom_toBottomOf="@+id/hrGraph"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/hrGraph"
                app:layout_constraintTop_toTopOf="@+id/hrGraph"
                app:srcCompat="@drawable/heart" />

            <ImageButton
                android:id="@+id/rrImage"
                android:layout_width="100dp"
                android:layout_height="75dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/lungs_image_description"
                android:padding="0dp"
                android:scaleType="fitCenter"
                android:onClick="goToRespiratoryRateActivity"
                app:layout_constraintBottom_toBottomOf="@+id/rrGraph"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/rrGraph"
                app:layout_constraintTop_toTopOf="@+id/rrGraph"
                app:srcCompat="@drawable/lungs" />

            <ImageButton
                android:id="@+id/abTImage"
                android:layout_width="100dp"
                android:layout_height="75dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/thermometer_image_description"
                android:padding="0dp"
                android:scaleType="fitCenter"
                android:onClick="goToAbdominalTemperatureActivity"
                app:layout_constraintBottom_toBottomOf="@+id/abtGraph"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/abtGraph"
                app:layout_constraintTop_toTopOf="@+id/abtGraph"
                app:srcCompat="@drawable/thermometer" />

            <ImageButton
                android:id="@+id/ctImage"
                android:layout_width="100dp"
                android:layout_height="75dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/thermometer_image_description"
                android:padding="0dp"
                android:scaleType="fitCenter"
                android:onClick="goToCoreTemperatureActivity"
                app:layout_constraintBottom_toBottomOf="@+id/ctGraph"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/ctGraph"
                app:layout_constraintTop_toTopOf="@+id/ctGraph"
                app:srcCompat="@drawable/thermometer" />

            <com.jjoe64.graphview.GraphView
                android:id="@+id/hrGraph"
                android:layout_width="240dp"
                android:layout_height="114dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDogName"
                android:layout_marginLeft="8dp" />

            <com.jjoe64.graphview.GraphView
                android:id="@+id/abtGraph"
                android:layout_width="240dp"
                android:layout_height="114dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ctGraph"
                android:layout_marginLeft="8dp" />

            <com.jjoe64.graphview.GraphView
                android:id="@+id/rrGraph"
                android:layout_width="240dp"
                android:layout_height="114dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hrGraph"
                android:layout_marginLeft="8dp" />

            <com.jjoe64.graphview.GraphView
                android:id="@+id/ctGraph"
                android:layout_width="240dp"
                android:layout_height="114dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rrGraph"
                android:layout_marginLeft="8dp" />

            <TextView
                android:id="@+id/tvDogName"
                android:layout_width="70dp"
                android:layout_height="32dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="64dp"
                android:text="@string/Dog_Name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/include" />

            <Button
                android:id="@+id/sessionChangeButton"
                android:layout_width="369dp"
                android:layout_height="46dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:onClick="changeSessionStatus"
                android:text="BEGIN SESSION"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/abtGraph" />

        </android.support.constraint.ConstraintLayout>

    </FrameLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/navigation_menu"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        android:layout_gravity="start">
    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
